# VKBO-LOD-TEST

./: README.md  pyproject.toml  resultaat.csv
reports/: verslag-lod-publicatie-2026-04-30.md
scripts/: check_vestigingen.py  plot_results.py
sources/: sparql_2026-04-30_07-23-08.csv  vestigingen.csv
src/vkbo_lod/: deref.py
tests/functional/: test_deref.py
tests/performance/: locustfile.py
