[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vkbo-lod-test"
version = "0.1.0"
description = "VKBO linked data publication tests"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "rdflib>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "matplotlib>=3.9",
    "pandas>=2.2",
]
perf = [
    "locust>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/vkbo_lod"]
